fix zoom z-index

--- a/asset/style.css
+++ b/asset/style.css
@@ -213,7 +213,6 @@ a.use-visited-color:visited {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 50;
     width: 90px;
     height: 90px;
     color: #fff;
